# python_de_dsa_log_parser

./: .gitignore  README.md  pyproject.toml  visualise_trie.py
.github/workflows/: ci.yml
log_parser/: __init__.py  benchmark.py  cli.py  generator.py  indexer.py  trie.py
output/: trie_structure.txt
tests/: test_log_parser.py
