[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "log-parser"
version         = "1.0.0"
description     = "Trie-based log pattern indexer — find prefix matches in sub-millisecond time across millions of log lines."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
keywords        = ["trie", "prefix-tree", "log-parsing", "search", "data-engineering", "dsa", "elasticsearch"]
dependencies    = []   # pure stdlib

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
log-parser    = "log_parser.cli:main"
log-benchmark = "log_parser.benchmark:main"
log-generator = "log_parser.generator:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/log-parser-dsa"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths     = ["tests"]
addopts       = "-v --tb=short"
log_cli       = true
log_cli_level = "WARNING"

[tool.coverage.run]
source = ["log_parser"]

[tool.coverage.report]
show_missing = true
fail_under   = 85
